add_executable(simple_example simple_example.cc)
target_include_directories(simple_example PRIVATE ../../include)

if (BUILD_ALL_IN_ONE)
    target_link_libraries(simple_example PUBLIC neug_libraries)
else()
    target_link_libraries(simple_example PUBLIC neug_graph_db_service neug_graph_db neug_compiler_shared neug_brpc_proto neug_rt_mutable_graph neug_utils neug_planner)
    if (BUILD_HTTP_SERVER)
        target_link_libraries(simple_example PUBLIC ${GFLAGS_LIBRARIES})
    endif()
endif()